syntax = "proto3";

// 命 令 号: 116
// 命令名称: dir_f_info_get
// 命令描述: 获取文件夹中对应的文件/文件夹信息
// 文件名称: s116_dir_f_info_get.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbDirFInfoGet";

message DirFInfoGetRequest {
  // ATTR: REQUSET
  string path = 1;  //文件夹路径
  uint32  file_idx = 2; //文件夹下第file_idx个文件的信息
}

message DirFInfoGetResponse {
  // ATTR: REQACK
  string file_name = 1; //文件名
  uint32  file_size = 2; //文件内容大小
  uint32 file_mode = 3; //文件类型：0：不存在；1：目录；2：文件
}
